--- a/index.html
+++ b/index.html
@@ -68,19 +68,23 @@
       <link href="./index.css" rel="stylesheet" />
 
       <div class="home-container">
-        <header data-role="Header" class="home-header">
-          <span class="home-text">Jai Ambey Enterprises</span>
+        <header id="home" data-role="Header" class="home-header">
+          <div class="home-container1">
+            <a href="#home" class="home-link">
+              <h2 class="home-heading">Jai Ambey Enterprises</h2>
+            </a>
+          </div>
           <div class="home-nav">
             <nav
-              class="navigation-links1-nav navigation-links1-root-class-name8"
+              class="navigation-links2-nav navigation-links2-root-class-name12"
             >
-              <a href="#home" class="navigation-links1-link">
+              <a href="#home" class="navigation-links2-link">
                 <span>Home</span>
               </a>
-              <a href="#product" class="navigation-links1-link1">
+              <a href="#product" class="navigation-links2-link1">
                 <span>Products</span>
               </a>
-              <a href="#footer" class="navigation-links1-link2">
+              <a href="#footer" class="navigation-links2-link2">
                 <span>Contact Us</span>
               </a>
             </nav>
@@ -93,15 +97,11 @@
             </svg>
           </div>
           <div data-role="MobileMenu" class="home-mobile-menu">
-            <div class="home-nav1">
-              <div class="home-container1">
-                <img
-                  alt="image"
-                  src="https://presentation-website-assets.teleporthq.io/logos/logo.png"
-                  class="home-image"
-                />
-                <div data-role="CloseMobileMenu" class="home-menu-close">
-                  <svg viewBox="0 0 1024 1024" class="home-icon02">
+            <nav class="home-nav1">
+              <div class="home-container2">
+                <span class="home-text">Jai Ambey Enterprises</span>
+                <div data-role="CloseMobileMenu" class="home-close-mobile-menu">
+                  <svg viewBox="0 0 1024 1024" class="home-icon2">
                     <path
                       d="M810 274l-238 238 238 238-60 60-238-238-238 238-60-60 238-238-238-238 60-60 238 238 238-238z"
                     ></path>
@@ -109,34 +109,19 @@
                 </div>
               </div>
               <nav
-                class="navigation-links3-nav navigation-links3-root-class-name11"
+                class="navigation-links2-nav navigation-links2-root-class-name14"
               >
-                <span class="navigation-links3-text"><span>About</span></span>
-                <span class="navigation-links3-text1">
-                  <span>Features</span>
-                </span>
-                <span class="navigation-links3-text2">
-                  <span>Pricing</span>
-                </span>
-                <span class="navigation-links3-text3"><span>Team</span></span>
-                <span class="navigation-links3-text4"><span>Blog</span></span>
+                <a href="#home" class="navigation-links2-link">
+                  <span>Home</span>
+                </a>
+                <a href="#product" class="navigation-links2-link1">
+                  <span>Products</span>
+                </a>
+                <a href="#footer" class="navigation-links2-link2">
+                  <span>Contact Us</span>
+                </a>
               </nav>
-            </div>
-            <div>
-              <svg viewBox="0 0 950.8571428571428 1024" class="home-icon04">
-                <path
-                  d="M925.714 233.143c-25.143 36.571-56.571 69.143-92.571 95.429 0.571 8 0.571 16 0.571 24 0 244-185.714 525.143-525.143 525.143-104.571 0-201.714-30.286-283.429-82.857 14.857 1.714 29.143 2.286 44.571 2.286 86.286 0 165.714-29.143 229.143-78.857-81.143-1.714-149.143-54.857-172.571-128 11.429 1.714 22.857 2.857 34.857 2.857 16.571 0 33.143-2.286 48.571-6.286-84.571-17.143-148-91.429-148-181.143v-2.286c24.571 13.714 53.143 22.286 83.429 23.429-49.714-33.143-82.286-89.714-82.286-153.714 0-34.286 9.143-65.714 25.143-93.143 90.857 112 227.429 185.143 380.571 193.143-2.857-13.714-4.571-28-4.571-42.286 0-101.714 82.286-184.571 184.571-184.571 53.143 0 101.143 22.286 134.857 58.286 41.714-8 81.714-23.429 117.143-44.571-13.714 42.857-42.857 78.857-81.143 101.714 37.143-4 73.143-14.286 106.286-28.571z"
-                ></path></svg
-              ><svg viewBox="0 0 877.7142857142857 1024" class="home-icon06">
-                <path
-                  d="M585.143 512c0-80.571-65.714-146.286-146.286-146.286s-146.286 65.714-146.286 146.286 65.714 146.286 146.286 146.286 146.286-65.714 146.286-146.286zM664 512c0 124.571-100.571 225.143-225.143 225.143s-225.143-100.571-225.143-225.143 100.571-225.143 225.143-225.143 225.143 100.571 225.143 225.143zM725.714 277.714c0 29.143-23.429 52.571-52.571 52.571s-52.571-23.429-52.571-52.571 23.429-52.571 52.571-52.571 52.571 23.429 52.571 52.571zM438.857 152c-64 0-201.143-5.143-258.857 17.714-20 8-34.857 17.714-50.286 33.143s-25.143 30.286-33.143 50.286c-22.857 57.714-17.714 194.857-17.714 258.857s-5.143 201.143 17.714 258.857c8 20 17.714 34.857 33.143 50.286s30.286 25.143 50.286 33.143c57.714 22.857 194.857 17.714 258.857 17.714s201.143 5.143 258.857-17.714c20-8 34.857-17.714 50.286-33.143s25.143-30.286 33.143-50.286c22.857-57.714 17.714-194.857 17.714-258.857s5.143-201.143-17.714-258.857c-8-20-17.714-34.857-33.143-50.286s-30.286-25.143-50.286-33.143c-57.714-22.857-194.857-17.714-258.857-17.714zM877.714 512c0 60.571 0.571 120.571-2.857 181.143-3.429 70.286-19.429 132.571-70.857 184s-113.714 67.429-184 70.857c-60.571 3.429-120.571 2.857-181.143 2.857s-120.571 0.571-181.143-2.857c-70.286-3.429-132.571-19.429-184-70.857s-67.429-113.714-70.857-184c-3.429-60.571-2.857-120.571-2.857-181.143s-0.571-120.571 2.857-181.143c3.429-70.286 19.429-132.571 70.857-184s113.714-67.429 184-70.857c60.571-3.429 120.571-2.857 181.143-2.857s120.571-0.571 181.143 2.857c70.286 3.429 132.571 19.429 184 70.857s67.429 113.714 70.857 184c3.429 60.571 2.857 120.571 2.857 181.143z"
-                ></path></svg
-              ><svg viewBox="0 0 602.2582857142856 1024" class="home-icon08">
-                <path
-                  d="M548 6.857v150.857h-89.714c-70.286 0-83.429 33.714-83.429 82.286v108h167.429l-22.286 169.143h-145.143v433.714h-174.857v-433.714h-145.714v-169.143h145.714v-124.571c0-144.571 88.571-223.429 217.714-223.429 61.714 0 114.857 4.571 130.286 6.857z"
-                ></path>
-              </svg>
-            </div>
+            </nav>
           </div>
         </header>
         <div class="home-title">
@@ -158,7 +143,7 @@
           <img
             alt="image"
             src="public/external/06a9c5_e31dbfdb6a814eb280ee0e28a6fc4eee~mv2-800w.webp"
-            class="home-image1"
+            class="home-image"
           />
         </div>
         <div id="product" class="home-our-products">
@@ -195,58 +180,60 @@
           </p>
         </div>
         <footer id="footer" class="home-footer">
-          <div class="home-container2">
+          <div class="home-container3">
             <h2 class="home-text16">Jai Ambey Enterprises</h2>
             <p class="home-text17">
               +91 99294 44418G-893, Road No. 14P, Vishwakarma Industrial
               AreaJaipur, Rajasthan, Indiasinghshek@ymail.com
             </p>
-            <div class="home-icon-group1">
+            <div class="home-icon-group">
               <a
                 href="https://www.indiamart.com/jai-ambeyenterprises/"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="home-link"
-              >
-                <img
-                  alt="image"
-                  src="public/external/indiamart-200h.webp"
-                  class="home-image2"
-                />
-              </a>
-              <a
-                href="https://www.facebook.com/chemical.tradingcompany?mibextid=hu50Ix"
                 target="_blank"
                 rel="noreferrer noopener"
                 class="home-link1"
               >
                 <img
                   alt="image"
-                  src="public/external/fb-1500w.webp"
-                  class="home-image3"
+                  src="public/external/indiamart-1800h.webp"
+                  class="home-image1"
                 />
               </a>
               <a
-                href="https://wa.me/+919929444418"
+                href="https://www.facebook.com/chemical.tradingcompany?mibextid=hu50Ix"
                 target="_blank"
                 rel="noreferrer noopener"
                 class="home-link2"
               >
                 <img
                   alt="image"
-                  src="public/external/whatsapp-200h.webp"
-                  class="home-image4"
+                  src="public/external/fb-1500w.webp"
+                  class="home-image2"
+                />
+              </a>
+              <a
+                href="https://wa.me/+919929444418"
+                target="_blank"
+                rel="noreferrer noopener"
+                class="home-link3"
+              >
+                <img
+                  alt="image"
+                  src="public/external/whatsapp-1800h.webp"
+                  class="home-image3"
                 />
               </a>
             </div>
           </div>
           <div class="home-links-container"></div>
         </footer>
-        <img
-          alt="image"
-          src="public/external/scrollup-200h.png"
-          class="home-image5"
-        />
+        <a href="#home" class="home-link4">
+          <img
+            alt="image"
+            src="public/external/scrollup-200h.png"
+            class="home-image4"
+          />
+        </a>
       </div>
     </div>
     <script
