--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <header id="home" data-role="Header" class="home-header">
           <div class="home-container1">
             <a href="#home" class="home-link">
-              <h2 class="home-heading">Jai Ambey Enterprises</h2>
+              <strong class="home-heading">Jai Ambey Enterprises</strong>
             </a>
           </div>
           <div class="home-nav">
@@ -183,8 +183,14 @@
           <div class="home-container3">
             <h2 class="home-text16">Jai Ambey Enterprises</h2>
             <p class="home-text17">
-              +91 99294 44418G-893, Road No. 14P, Vishwakarma Industrial
-              AreaJaipur, Rajasthan, Indiasinghshek@ymail.com
+              <span>+91 99294 44418G-893,</span>
+              <br />
+              <span>Road No. 14P,</span>
+              <br />
+              <span>
+                Vishwakarma Industrial Area Jaipur, Rajasthan,
+                Indiasinghshek@ymail.com
+              </span>
             </p>
             <div class="home-icon-group">
               <a
@@ -195,7 +201,7 @@
               >
                 <img
                   alt="image"
-                  src="public/external/indiamart-1800h.webp"
+                  src="public/external/indiamart-200h.webp"
                   class="home-image1"
                 />
               </a>
@@ -219,13 +225,12 @@
               >
                 <img
                   alt="image"
-                  src="public/external/whatsapp-1800h.webp"
+                  src="public/external/whatsapp-200h.webp"
                   class="home-image3"
                 />
               </a>
             </div>
           </div>
-          <div class="home-links-container"></div>
         </footer>
         <a href="#home" class="home-link4">
           <img
